# freebird

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  weekly-audit.yml
config/: default.toml
crates/freebird-channels/: Cargo.toml
crates/freebird-channels/src/: cli.rs  lib.rs  tcp.rs
crates/freebird-core/: Cargo.toml
crates/freebird-core/src/: builder.rs  config.rs  database.rs  error.rs  knowledge.rs  lib.rs  tools.rs  util.rs
crates/freebird-daemon/: Cargo.toml
crates/freebird-daemon/src/: chat.rs  main.rs  migrate.rs  providers.rs  tools.rs
crates/freebird-daemon/src/ui/: completion.rs  consent.rs  input.rs  mod.rs  output.rs  spinner.rs  status.rs  theme.rs
crates/freebird-daemon/tests/: config_tests.rs
crates/freebird-memory/: Cargo.toml
crates/freebird-memory/src/: event.rs  file.rs  helpers.rs  in_memory.rs  lib.rs  sqlite.rs  sqlite_audit.rs  sqlite_event.rs  sqlite_knowledge.rs  sqlite_memory.rs  sqlite_summary.rs
crates/freebird-memory/src/migrations/: 001_initial.sql  002_event_store.sql  002_summaries.sql  003_drop_conversations.sql
crates/freebird-memory/tests/: file_tests.rs  in_memory_tests.rs
crates/freebird-memory/tests/common/: mod.rs
crates/freebird-providers/: Cargo.toml
crates/freebird-providers/src/: anthropic.rs  lib.rs
crates/freebird-providers/src/anthropic/: client.rs  mod.rs  stream.rs  types.rs
crates/freebird-providers/tests/: anthropic_api_tests.rs
crates/freebird-providers/tests/helpers/: mod.rs
crates/freebird-runtime/: Cargo.toml
crates/freebird-runtime/src/: agent.rs  approval_bridge.rs  command_handler.rs  history.rs  lib.rs  observation.rs  registry.rs  router.rs  session.rs  shutdown.rs  stream.rs  summarize.rs  task_drain.rs  tool_executor.rs  tool_registry.rs
crates/freebird-runtime/src/agent/: events.rs  knowledge.rs  loop_impl.rs  mod.rs
crates/freebird-runtime/src/tool_executor/: mod.rs  pipeline.rs
crates/freebird-runtime/tests/: agent_tests.rs  agentic_loop_tests.rs  concurrent_tests.rs  consent_bridge_tests.rs  stream_tests.rs  summarization.rs
crates/freebird-runtime/tests/helpers/: mod.rs
crates/freebird-security/: Cargo.toml
crates/freebird-security/src/: approval.rs  audit.rs  auth.rs  budget.rs  capability.rs  consent.rs  db_key.rs  egress.rs  error.rs  injection.rs  lib.rs  paths.rs  safe_types.rs  secret_guard.rs  sensitive.rs  taint.rs
crates/freebird-security/src/safe_types/: message.rs  mod.rs  output.rs  path.rs  shell.rs  url.rs
crates/freebird-security/tests/: adversarial_audit.rs  adversarial_capability.rs  adversarial_egress.rs  adversarial_injection.rs  adversarial_paths.rs  adversarial_shell.rs  adversarial_taint.rs
crates/freebird-security/tests/helpers/: mod.rs
crates/freebird-tools/: Cargo.toml
crates/freebird-tools/src/: bash.rs  cargo_verify.rs  common.rs  edit.rs  edit_history.rs  filesystem.rs  glob_find.rs  grep.rs  knowledge.rs  lib.rs  network.rs  planner.rs  repo_map.rs  session.rs  shell.rs  test_utils.rs  viewer.rs  workspace.rs
crates/freebird-tools/src/edit/: apply.rs  mod.rs  validate.rs
crates/freebird-tools/src/planner/: algorithm.rs  mod.rs
crates/freebird-tools/src/repo_map/: cache.rs  graph.rs  mod.rs  pagerank.rs
crates/freebird-tools/tests/: planner_integration.rs
crates/freebird-traits/: Cargo.toml
crates/freebird-traits/src/: audit.rs  channel.rs  event.rs  id.rs  knowledge.rs  lib.rs  memory.rs  provider.rs  summary.rs  tool.rs
crates/freebird-tui/: Cargo.toml
crates/freebird-tui/src/: lib.rs  replay.rs
crates/freebird-tui/src/ui/: completion.rs  consent.rs  input.rs  raw_writer.rs  spinner.rs  status.rs  theme.rs
crates/freebird-types/: Cargo.toml
crates/freebird-types/src/: config.rs  id.rs  lib.rs  planner.rs  protocol.rs
crates/freebird-types/src/config/: memory.rs  mod.rs  runtime.rs  security.rs
crates/rc-channels/: Cargo.toml
crates/rc-daemon/: Cargo.toml
crates/rc-memory/: Cargo.toml
crates/rc-providers/: Cargo.toml
crates/rc-runtime/: Cargo.toml
crates/rc-security/: Cargo.toml
crates/rc-tools/: Cargo.toml
crates/rc-traits/: Cargo.toml
crates/rc-traits/src/: channel.rs  lib.rs  memory.rs  provider.rs  tool.rs
crates/rc-types/: Cargo.toml
docs/plans/: 2026-03-04-daemon-client-separation.md  2026-03-06-consent-bridge-design.md  2026-03-06-consent-bridge-impl.md  build-order.md
docs/superpowers/plans/: 2026-03-09-knowledge-store.md
docs/superpowers/specs/: 2026-03-09-knowledge-store-design.md
