[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
# Internal crates
freebird-traits = { path = "crates/freebird-traits" }
freebird-types = { path = "crates/freebird-types" }
freebird-security = { path = "crates/freebird-security" }
freebird-runtime = { path = "crates/freebird-runtime" }
freebird-providers = { path = "crates/freebird-providers" }
freebird-channels = { path = "crates/freebird-channels" }
freebird-tools = { path = "crates/freebird-tools" }
freebird-memory = { path = "crates/freebird-memory" }
freebird-core = { path = "crates/freebird-core" }
freebird-tui = { path = "crates/freebird-tui" }

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "codec"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Crypto & secrets
secrecy = { version = "0.10", features = ["serde"] }
ring = "0.17"
hex = "0.4"

# Database
rusqlite = { version = "0.32", features = ["bundled-sqlcipher", "column_decltype"] }

# HTTP client (for providers)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# URL parsing
url = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Allocator
mimalloc = { version = "0.1", default-features = false }

# Terminal UI
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"

# Regex & glob
regex = "1"
glob = "0.3"

# Filesystem
home = "0.5"

# AST parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"

# Testing — reference under [dev-dependencies] in each crate, NOT [dependencies]
tempfile = "3"
wiremock = "0.6"
proptest = "1"
