[package]
name = "freebird-channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Channel implementations for Freebird — CLI, Signal, WebSocket, etc."

[dependencies]
freebird-traits = { workspace = true }
freebird-types = { workspace = true }
freebird-security = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
