[package]
name = "freebird-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Freebird daemon binary — the composition root"

[[bin]]
name = "freebird"
path = "src/main.rs"

[dependencies]
freebird-traits = { workspace = true }
freebird-types = { workspace = true }
freebird-runtime = { workspace = true }
freebird-providers = { workspace = true }
freebird-channels = { workspace = true }
freebird-memory = { workspace = true }
freebird-security = { workspace = true }
freebird-tools = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
anyhow = { workspace = true }
secrecy = { workspace = true }
home = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
