[package]
name = "freebird-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true
description = "Freebird daemon binary — thin shell over freebird-core"

[[bin]]
name = "freebird"
path = "src/main.rs"

[dependencies]
freebird-core = { workspace = true }
freebird-tui = { workspace = true }
freebird-traits = { workspace = true }
freebird-types = { workspace = true }
freebird-runtime = { workspace = true }
freebird-security = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
figment = { workspace = true }
tempfile = { workspace = true }
