[package]
name = "freebird-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true
description = "LLM provider implementations for Freebird — Anthropic, OpenAI, etc."

[dependencies]
freebird-traits = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
wiremock = { workspace = true }
