[package]
name = "freebird-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent runtime loop, session management, and orchestration for Freebird"

[dependencies]
freebird-traits = { workspace = true }
freebird-types = { workspace = true }
freebird-security = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
freebird-memory = { path = "../freebird-memory" }
