[package]
name = "freebird-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Security primitives for Freebird — taint tracking, safe paths, capabilities, audit"

[dependencies]
freebird-traits = { workspace = true }
freebird-types = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
secrecy = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
tokio = { version = "1", default-features = false, features = ["sync", "time"] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
