[package]
name = "freebird-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Built-in tool implementations for Freebird — filesystem, shell, network"

[dependencies]
freebird-traits = { workspace = true }
freebird-types = { workspace = true }
freebird-security = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
