[package]
name = "freebird-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true
description = "Core trait definitions and associated types for Freebird"

# External deps required for trait signatures. ZERO freebird-* deps.
[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
