[package]
name = "freebird-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true
description = "Freebird terminal UI — interactive chat client and session replay"

[dependencies]
freebird-traits = { workspace = true }
freebird-types = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
