[package]
name = "freebird-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared domain types for Freebird — config, ID generation"

[dependencies]
freebird-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
