[package]
name = "rc-channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Channel implementations for RClaw — CLI, Signal, WebSocket, etc."

[dependencies]
rc-traits = { workspace = true }
rc-types = { workspace = true }
rc-security = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
