[package]
name = "rc-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent runtime loop, session management, and orchestration for RClaw"

[dependencies]
rc-traits = { workspace = true }
rc-types = { workspace = true }
rc-security = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
