[package]
name = "rc-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Security primitives for RClaw — taint tracking, safe paths, capabilities, audit"

[dependencies]
rc-traits = { workspace = true }
rc-types = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
