[package]
name = "rc-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Built-in tool implementations for RClaw — filesystem, shell, network"

[dependencies]
rc-traits = { workspace = true }
rc-types = { workspace = true }
rc-security = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
