[package]
name = "rc-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core trait definitions for RClaw — provider, channel, tool, memory"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
