[package]
name = "rc-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared domain types for RClaw — messages, sessions, config, IDs"

[dependencies]
rc-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
